--- a/src/app/shared/components/column/column.component.html
+++ b/src/app/shared/components/column/column.component.html
@@ -1,7 +1,15 @@
-    <p>
-      {{data.name}}
-    </p>
-
-    <p *ngFor="let row of data.content" >
-      {{row}}
-    </p>
+<ion-col>
+  <ion-text>
+    {{data.time}}
+  </ion-text>
+</ion-col>
+<ion-col>
+  <ion-text>
+    {{data.amount}}
+  </ion-text>
+</ion-col>
+<ion-col>
+  <ion-text>
+    {{data.concept}}
+  </ion-text>
+</ion-col>
