feat: add modal for adding rows

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,36 +7,47 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-header>
+    <ion-toolbar>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+              Martes 28 de Diciembre
+          </ion-col>
+        </ion-row>
+        </ion-grid>
+    </ion-toolbar>
+  </ion-header>
   <ion-grid>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          Martes 28 de Diciembre
-        </ion-item>
-      </ion-col>
-    </ion-row>
     <ion-row class="ion-justify-content-between">
       <ion-col>Hora</ion-col>
       <ion-col>Monto</ion-col>
       <ion-col>Concepto</ion-col> 
     </ion-row>
-    <ion-row class="ion-justify-content-between" *ngFor="let column of columns">
+    <ion-row class="ion-justify-content-between" *ngFor="let row of rows">
       <ion-col>
         <ion-text>
-          {{column.time}}
+          {{row.time}}
         </ion-text>
       </ion-col>
       <ion-col>
         <ion-text>
-          {{column.amount}}
+          {{row.amount}}
         </ion-text>
       </ion-col>
       <ion-col>
         <ion-text>
-          {{mapConcept(column.concept)}}
+          {{mapConcept(row.concept)}}
         </ion-text>
       </ion-col>
     </ion-row>
   </ion-grid>
-
+  <ion-header>
+    <ion-toolbar>
+      <ion-button (click)="addRow()">
+        <ion-icon name="add"></ion-icon>
+        Agregar
+      </ion-button>
+    </ion-toolbar>
+  </ion-header>
 </ion-content>
