--- a/src/global.scss
+++ b/src/global.scss
@@ -28,16 +28,10 @@
 
 @media screen and (max-width: 768px) {
     ion-modal.mini-modal {
-        &::part(backdrop) {
-            z-index: 1;
-        }
         &::part(content) {
+            color: var(--ion-color-dark);
             border-radius: 1em 1em 0 0;
-            margin-top: 50vh;
-            z-index: 2;
-            height: 50%;
         }
-    
     }
   
   }
