--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Inicio
+      Caja
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,47 +11,63 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-            {{today | date:'EEEE, MMMM d, y h:mm:ss a':'-0400':'es-DO' | uppercase}}
+            {{month.month}}
         </ion-col>
       </ion-row>
-      <ion-row class="ion-justify-content-between">
-        <ion-col>Hora</ion-col>
-        <ion-col>Monto</ion-col>
-        <ion-col>Concepto</ion-col> 
+      <ion-row>
+        <!-- <ion-col size="3">+ / -</ion-col> -->
+        <ion-col size="2">Dia</ion-col> 
+        <ion-col>Ventas</ion-col>
+        <ion-col>Gastos</ion-col>
+        <ion-col>Desembolso</ion-col>
+        <ion-col>Caja</ion-col>
       </ion-row>
       </ion-grid>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid *ngIf="rows.length">
-    <ion-row (click)="options(row)" class="ion-justify-content-between" *ngFor="let row of rows">
-      <ion-col>
-        <ion-text>
-          {{row.time}}
-        </ion-text>
+  <ion-grid *ngIf="days?.length">
+    <ion-row class="ion-align-items-center" *ngFor="let day of days; index as i">
+      <!-- <ion-col size="2.5">
+        <ion-button>
+          <ion-icon [name]="day?.sign"></ion-icon>
+        </ion-button>
+      </ion-col> -->
+      <ion-col size="2">
+        <ion-item lines="none">
+          <ion-text>
+            {{('' + day?.day).padStart(2, '0')}}
+          </ion-text>
+        </ion-item>
       </ion-col>
       <ion-col>
-        <ion-text>
-          {{row.amount}}
-        </ion-text>
+        <ion-input placeholder="vacio" inputmode="numeric" (ionChange)="onValueChange($event, 'sales', i)" [value]="day.sales"></ion-input>
       </ion-col>
       <ion-col>
-        <ion-text>
-          {{mapConcept(row.concept)}}
-        </ion-text>
+        <ion-input placeholder="vacio" inputmode="numeric" (ionChange)="onValueChange($event, 'expenses', i)" [value]="day.expenses"></ion-input>
+      </ion-col>
+      <ion-col>
+        <ion-input placeholder="vacio" inputmode="numeric" (ionChange)="onValueChange($event, 'outlays', i)" [value]="day.outlays"></ion-input>
+      </ion-col>
+      <ion-col>
+        <ion-item lines="none">
+          <ion-text class="ion-text-center">
+            {{day.cash}}
+          </ion-text>
+        </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-title *ngIf="!rows.length">
-    <h1 style="text-align: center; margin-top: 30vh;">No hay registros</h1>
-  </ion-title>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-button expand="full" shape="round" (click)="addRow()">
-      <ion-icon name="add"></ion-icon>
-      Agregar
-    </ion-button>
+      <ion-row>
+        <ion-col size="2">Total</ion-col> 
+        <ion-col>{{month.totalSales}}</ion-col>
+        <ion-col>{{month.totalExpenses}}</ion-col>
+        <ion-col>{{month.totalOutlays}}</ion-col>
+        <ion-col>{{month.balance}}</ion-col>
+      </ion-row>
   </ion-toolbar>
 </ion-footer>
