--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -3,13 +3,13 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="today"></ion-icon>
-      <ion-label>Hoy</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="balance">
-      <ion-icon name="calendar"></ion-icon>
       <ion-label>Balance</ion-label>
     </ion-tab-button>
+
+    <!-- <ion-tab-button tab="balance">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>Balance</ion-label>
+    </ion-tab-button> -->
 
     <ion-tab-button tab="profile">
       <ion-icon name="person"></ion-icon>
