--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,14 +9,26 @@
 <ion-header>
   <ion-toolbar>
     <ion-grid>
-      <ion-row>
-        <ion-col>
-            {{month.month}}
+      <ion-row class="ion-align-items-center">
+        <ion-col size="3">
+            <ion-button fill="clear" (click)="gotoPrevMonth()">
+              <ion-icon name="chevron-back"></ion-icon>
+            </ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-title>
+            {{month.name}}
+          </ion-title>
+        </ion-col>
+        <ion-col size="3">
+            <ion-button fill="clear" (click)="gotoNextMonth()">
+              <ion-icon name="chevron-forward"></ion-icon>
+            </ion-button>
         </ion-col>
       </ion-row>
       <ion-row>
         <!-- <ion-col size="3">+ / -</ion-col> -->
-        <ion-col size="2">Dia</ion-col> 
+        <ion-col size="2">Dia</ion-col>
         <ion-col>Ventas</ion-col>
         <ion-col>Gastos</ion-col>
         <ion-col>Desembolso</ion-col>
@@ -63,7 +75,7 @@
 <ion-footer>
   <ion-toolbar>
       <ion-row>
-        <ion-col size="2">Total</ion-col> 
+        <ion-col size="2">Total</ion-col>
         <ion-col>{{month.totalSales}}</ion-col>
         <ion-col>{{month.totalExpenses}}</ion-col>
         <ion-col>{{month.totalOutlays}}</ion-col>
