--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -2,3 +2,10 @@ ion-item {
     --padding-start: 0;
     --inner-padding-start: 0;
 }
+
+div.month-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
